Mosalam-Task4/gitops-repo/apps/frontend/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: app-prod
spec:
  parentRefs:
    - name: platform-gateway
      namespace: default
  hostnames:
    - app.mosalam.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
